tdf#116954 dbahsql: migrate views too

Change-Id: If6de6491b89cf2fb94586990f5c3e8483e74d464